Přidána kompletní dokumentace pro deployment
- Kompletní průvodce pro nasazení na různé typy hostingu
- NASAZENI_PRODUKCE.md - pro VPS s plným přístupem
- NASAZENI_SDILENY_HOSTING.md - pro sdílený hosting s cPanel
- NASAZENI_WEDOS_SSH.md - specificky pro cesky-hosting.cz VPS
- DEPLOYMENT_WORKFLOW.md - workflow pro deployment změn
- DEPLOYMENT_NAVOD.md - stručný český návod
- JAK_NASADIT.md - rychlý přehled pro začátečníky
- START_HERE.md - orientace v dokumentaci
- Pomocné skripty: prepare-shared-hosting.sh, deploy-helper.sh, server-deploy.sh
- Migrace pro database queue, cache a session tabulky
- Podpora PHP 8.2-8.4 v composer.json
- .gitignore pro deployment artefakty

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ Thumbs.db
 /storage/framework/cache/*
 /storage/framework/sessions/*
 /storage/framework/views/*
+
+# Deployment artifacts
+.env.shared-hosting
+*.tar.gz
+install.php
