--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["calendar", "sync", "google", "microsoft", "oauth"],
     "license": "proprietary",
     "require": {
-        "php": "^8.2",
+        "php": "^8.2|^8.3|^8.4",
         "google/apiclient": "^2.15",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^10.0",
