--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "microsoft/microsoft-graph": "^1.109",
         "predis/predis": "^2.2",
         "sabre/vobject": "^4.5",
-        "stripe/stripe-php": "^12.0"
+        "stripe/stripe-php": "^12.0",
+        "webklex/php-imap": "^6.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
