Add multi-currency pricing support with Stripe
- Add PricingHelper for currency management based on locale
- Update config/services.php with multi-currency prices
- Integrate PricingHelper in AuthController and BillingController
- Update billing views to display dynamic pricing
- Update .gitignore for shared hosting deployment

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ Thumbs.db
 /storage/logs/*.log
 
 # Cache
-/bootstrap/cache/*
+/bootstrap/cache/.gitignore
 /storage/framework/cache/*
 /storage/framework/sessions/*
 /storage/framework/views/*
